<resources>
    <string name="app_name">Rider App</string>

    <string name="location_permission">Location Permission</string>
    <string name="permission_dialog_description">\"This Permission Needed For The Better Experience Of The App. \"</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="pending">Pending</string>
    <string name="hold">Hold</string>
    <string name="dispatch">Dispatch</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="customer_name">Customer: </string>
    <string name="mobile">Mobile: </string>
    <string name="date">Date: </string>
    <string name="tracking_code">Tracking Id: </string>
    <string name="order_no">Order No: </string>
    <string name="distance">Distance: </string>
    <string name="status">Status: </string>
    <string name="address">Adress: </string>
    <string name="close">Close</string>
    <string name="riders">Riders</string>
    <string name="rider_roles">Rider Roles</string>
    <string name="no_data_found">No data found</string>
    <string name="rider_name">Rider Name</string>
    <string name="email">Email</string>
    <string name="cnic">CNIC</string>
    <string name="rider_role">Rider Role</string>
    <string name="save">Save</string>
    <string name="add_rider_role">Add Rider Role</string>
    <string name="enter_role_name">Enter role name</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="retrieve">Retrieve</string>
    <string name="authorize">Authorize</string>
    <string name="pdf">PDF</string>
    <string name="doc_no">Doc.no</string>
    <string name="customer">Customer</string>
    <string name="product">Product</string>
    <string name="item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="discount">Discount:</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_product">Add Product</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="unit_retail">Unit Retail</string>
    <string name="add_order">Add Order</string>
    <string name="qty">Qty</string>
    <string name="rate">Rate</string>
    <string name="order">Order</string>

</resources>