<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.moveitech.riderapp.utils.Constants"/>
        <variable
            name="viewModel"
            type="com.moveitech.riderapp.viewModel.RoleViewModel" />
        <variable
            name="model"
            type="com.moveitech.riderapp.dataModel.riderRole.RiderRole" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rider_role"
            android:textSize="18sp"
            android:textColor="@color/app_theme_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_role_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_role_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@={viewModel.role.roleName}"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp" />

        <CheckBox
            android:id="@+id/cb_active_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textSize="16sp"
            android:textColor="@color/app_theme_color"
            android:textStyle="bold"
            android:checked="@={viewModel.role.isActive}"
            app:layout_constraintTop_toBottomOf="@id/et_role_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="@{()->viewModel.onClick(Constants.CANCEL_BTN)}"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/cb_active_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="@{()->viewModel.onClick(Constants.SAVE_ROLE_BTN)}"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>