<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.moveitech.riderapp.utils.Constants"/>
        <variable
            name="viewModel"
            type="com.moveitech.riderapp.viewModel.RiderViewModel" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_rider_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rider_name"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_rider_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@={viewModel.riderObserver.riderName}"
                    android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_call_24"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:text="@={viewModel.riderObserver.mobile}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@android:drawable/sym_action_email"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.riderObserver.email}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_cnic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnic"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_id_card"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cnic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:text="@={viewModel.riderObserver.cnic}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.riderObserver.address}"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/app_theme_color"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.riderObserver.password}"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_rider_role_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rider_role"
                android:textColorHint="@color/app_theme_color"
                app:boxBackgroundColor="@color/white"
                android:layout_marginVertical="10dp">

                <AutoCompleteTextView
                    android:id="@+id/rider_role_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.roleName}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:layout_gravity="bottom"
                android:onClick="@{()->viewModel.onClick(Constants.SAVE_RIDER_BTN)}"/>

        </LinearLayout>

    </ScrollView>
</layout>