<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.moveitech.riderapp.viewModel.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment"
        android:padding="25dp"
        android:elevation="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/app_theme_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="60dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:hintTextColor="@color/white"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:elevation="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.mobileNum}"
                        android:textColor="@color/white"
                        android:inputType="phone"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    android:hint="@string/password"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:endIconMode="password_toggle"
                    android:elevation="5dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"

                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_mobile_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.passWord}"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:cornerRadius="10dp"
            android:onClick="@{()-> viewModel.onClick(0)}"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintStart_toStartOf="@id/card_view"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>